# vircadia-world-blender-tools

./: .gitattributes  .gitignore  .gitmodules  README.md  __init__.py  _category_.json  blender_manifest.toml  config.py  package-lock.json  pyproject.toml  requirements.txt
docs/: _category_.json  general.md  general.mdx  package.json  properties.md  scripting.md  test.md
import_export/: __init__.py  gltf_exporter.py  gltf_exporter_test.py  gltf_importer.py  gltf_supabase_import_export.py  json_exporter.py  json_importer.py  old_gltf_exporter.py  old_gltf_importer.py  old_json_exporter.py  old_json_importer.py  world_export.py  world_import.py  world_import_export_test.py
json_library/: models_all.json  models_imageOnly.json  models_particleOnly.json  models_shapeOnly.json  models_textOnly.json  models_webOnly.json
lightmap/: __init__.py  generateLightmap.py  generateLightmaps.py  lightmap-generation-summary.md  lightmap_utils.py
operators/: __init__.py  clipboard_operators.py  convert_to_vircadia_operators.py  entity_creation_operators.py  export_operators.py  import_operators.py  lightmap_operators.py
templates/: UNUSED_REMOVE_models_all.json  UNUSED_REMOVE_models_empty.json  Vircadia_Collisions.py  Vircadia_GLTF.py  template_image.json  template_light.json  template_model.json  template_particle.json  template_shape.json  template_text.json  template_web.json  template_zone.json
ui/: __init__.py  convert_to_vircadia_panel.py  custom_properties_panel.py  entity_creation_panel.py  lightmap_panel.py  main_panel.py  tooltips.py
utils/: __init__.py  entities.py  (+9 more)
(+40 files in other folders)
